clusters/k3s-homelab/mealie/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-ingress
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.briangreen.io`)
      kind: Rule
      services:
        - name: mealie
          port: 80
  tls:
    secretName: mealie-briangreen-io-tls
